fix(app): fixed arabic font optimizeLegibility

--- a/assets/sass/fonts.scss
+++ b/assets/sass/fonts.scss
@@ -11,7 +11,7 @@ html {
   font-family: "HelveticaNeueLT Arabic 55 Roman", "Helvetica Neue", "Roboto", "Helvetica", BlinkMacSystemFont, -apple-system, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Arial", sans-serif; ;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeSpeed;
+  text-rendering: optimizeLegibility;
   text-size-adjust: 100%;
   line-height: 1.5;
 }
